[metadata]
name = beangadgets
version = 0.1.dev0
url = https://github.com/dnicolodi/beangadgets/
author = Daniele Nicolodi
author_email = daniele@grinta.net
keywords = beancount
license = GPL-3.0-or-later

[options]
include_package_data = True
packages = find:
install_requires =
    beancount >=2.3
    click >7.0
